--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div class="container">
         <div class="menu-container">
-            <button class="btn">Add Row</button>
+            <button class="btn add-row-btn">Add Row</button>
             <button class="btn">Add Column</button>
             <button class="btn">Remove Row</button>
             <button class="btn">Remove Column</button>
             <button class="btn">Change Color</button>
         </div>
         <div class="grid-container">
+            <!-- <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell"></div> -->
         </div>
     </div>
     <script src="script.js"></script>
