--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="menu-container">
             <button class="btn add-row-btn">Add Row</button>
-            <button class="btn">Add Column</button>
+            <button class="btn add-col-btn">Add Column</button>
             <button class="btn">Remove Row</button>
             <button class="btn">Remove Column</button>
             <button class="btn">Change Color</button>
