added remove row btn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="menu-container">
             <button class="btn add-row-btn">Add Row</button>
             <button class="btn add-col-btn">Add Column</button>
-            <button class="btn">Remove Row</button>
+            <button class="btn remove-row-btn">Remove Row</button>
             <button class="btn">Remove Column</button>
             <button class="btn">Change Color</button>
         </div>
