added remove column btn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button class="btn add-row-btn">Add Row</button>
             <button class="btn add-col-btn">Add Column</button>
             <button class="btn remove-row-btn">Remove Row</button>
-            <button class="btn">Remove Column</button>
+            <button class="btn remove-col-btn">Remove Column</button>
             <button class="btn">Change Color</button>
         </div>
         <div class="grid-container">
