added color picker menu

--- a/index.html
+++ b/index.html
@@ -9,11 +9,58 @@
 <body>
     <div class="container">
         <div class="menu-container">
-            <button class="btn add-row-btn">Add Row</button>
-            <button class="btn add-col-btn">Add Column</button>
-            <button class="btn remove-row-btn">Remove Row</button>
-            <button class="btn remove-col-btn">Remove Column</button>
-            <button class="btn">Change Color</button>
+            <div class="main-menu">
+                <button class="btn add-row-btn">Add Row</button>
+                <button class="btn add-col-btn">Add Column</button>
+                <button class="btn remove-row-btn">Remove Row</button>
+                <button class="btn remove-col-btn">Remove Column</button>
+            </div>
+            <div class="color-picker">
+                <div class="color-menu">
+                    <div class="color-btn">
+                        <span class="btn-text">Select your color</span>
+                    </div>
+                    <ul class="color-options">
+                        <li class="color">
+                            <span class="color-text">Red</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Orange</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Yellow</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Yellow Green</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Green</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Cyan</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Blue</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Blue Violet</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Violet</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Purple</span>
+                        </li>
+                        <li class="color">
+                            <span class="color-text">Pink</span>
+                        </li>
+                    </ul>
+                </div>
+                <button class="btn change-all-color-btn">Change All Cell Colors</button>
+                <button class="btn change-color-btn">Change Selected Cell Color</button>
+                <button class="btn change-remaining-btn">Color Remaining Cells</button>
+                <button class="btn reset-all-color-btn">Reset All Cell Color</button>
+            </div>
         </div>
         <div class="grid-container">
             <!-- <div class="cell"></div>
